Update links for images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div class="mainImage1">
-    <img src="./Images/heropage.png" alt="" class="mainImage1img">
+    <img src="https://i.postimg.cc/28FQw3mH/heropage.png" alt="" class="mainImage1img">
     <div class="mainText1">
        <div class="mainTextBox1">
           <span class="mainTextBoxSpan1">Change Someone's</span>
@@ -19,7 +19,7 @@
        </div>
        <div class="mainTextBox2" >DONATE TO MAKE <br> A DIFFERENCE</div>
        <div class="mainTextBox3">
-          <img src="./Images/logo.webp" alt="" class="mainTextBox3img">
+          <img src="https://i.postimg.cc/dVQkz2Vm/logo.webp" alt="" class="mainTextBox3img">
        </div> 
     </div>
 </div>
@@ -27,7 +27,7 @@
 
 <div class="content1">
      <div class="contentBox1">
-        <img src="./Images/1.png" alt="" class="contentBox1img">
+        <img src="https://i.postimg.cc/JhnXBNw4/1.png" alt="" class="contentBox1img">
 
     <div class="aboutUs1">
         <h1>About us</h1>
@@ -42,14 +42,14 @@
 
      <div class="contentBox2">
         <div class="colorBox1 colorBox1a"></div>
-        <img src="./Images/2.png" alt="" class="contentBox2img contentBox2imga">
-        <img src="./Images/4.png" alt="" class="contentBox2img contentBox2imgb">
+        <img src="https://i.postimg.cc/gjvLP4h4/2.png" alt="" class="contentBox2img contentBox2imga">
+        <img src="https://i.postimg.cc/HW5y5WN5/4.png" alt="" class="contentBox2img contentBox2imgb">
      </div>
 
      <div class="contentBox3">
-       <img src="./Images/3.jpg" alt="" class="contentBox3img contentBox3imga">
+       <img src="https://i.postimg.cc/43S9vYZv/3.jpg" alt="" class="contentBox3img contentBox3imga">
        <div class="colorBox1b colorBox1"></div>
-       <img src="./Images/5.jpg" alt="" class="contentBox3img contentBox3imgb">
+       <img src="https://i.postimg.cc/D0Km5sNG/5.jpg" alt="" class="contentBox3img contentBox3imgb">
      </div>
 </div>
 
@@ -94,12 +94,12 @@
                     enrolled from nursery to 5th standard and 11+ teachers.</p>
             </div>
             <div class="sec-2">
-                <img class="initiatives-img" src="./Images/DSC_0065 (1).jpg" alt="logo">
+                <img class="initiatives-img" src="https://i.postimg.cc/Wz6zyzRH/DSC-0065-1.jpg" alt="logo">
             </div>
         </div>
         <div class="cont2">
             <div class="sec-2 cont2-img">
-                <img class="initiatives-img" src="./Images/DSC_0065 (1).jpg" alt="logo">
+                <img class="initiatives-img" src="https://i.postimg.cc/Wz6zyzRH/DSC-0065-1.jpg" alt="logo">
             </div>
             <div class="sec-1 in-cnt-aln-r8">
                 <h1>Rise</h1>
@@ -119,7 +119,7 @@
                 </p>
             </div>
             <div class="sec-2">
-                <img class="initiatives-img" src="./Images/Screenshot2.png" alt="logo">
+                <img class="initiatives-img" src="https://i.postimg.cc/PrTPwWYs/Screenshot2.png" alt="logo">
             </div>
         </div>
         <section class="img-sec-2">
@@ -128,11 +128,11 @@
     <footer>
         <div class="part1-2">
             <div class="footer-sec1">
-                <img src="./Images/quote.png" alt="logo">
+                <img src="https://i.postimg.cc/Dz8Wz7sS/quote.png" alt="logo">
                 <div class="quote2">
                     We make a living by what we get. We make a life by what we give.
                 </div>
-                <img src="./Images/double-quotes.png" alt="logo">
+                <img src="https://i.postimg.cc/cCqtjPvr/double-quotes.png" alt="logo">
             </div>
             <div>
                 Winston Churchill
@@ -146,7 +146,7 @@
             <div class="details-cnt-us">
                 <a href="mailto:gywsociety@gmail.com">
                     <span class="img-msg">
-                        <img src="./Images/email.png" alt="logo">
+                        <img src="https://i.postimg.cc/TY6WcM8s/email.png" alt="logo">
                     </span>
                     <div>
                         gywsociety@gmail.com
@@ -155,7 +155,7 @@
             </div>
             <div class="details-cnt-us">
                 <a href="tel:+918158878735">
-                    <img src="./Images/call.png" alt="logo">
+                    <img src="https://i.postimg.cc/nz9Q3ncy/call.png" alt="logo">
                     <div>
                         +91 8158878735
                     </div>
